--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:orientation="horizontal">
         <EditText
+            android:id="@+id/txtSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
