nhannt Add button map

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -11,6 +11,11 @@
         android:title="@string/title_history" />
 
     <item
+        android:id="@+id/navigation_map"
+        android:icon="@drawable/pin"
+        android:title="@string/title_map" />
+
+    <item
         android:id="@+id/navigation_cart"
         android:icon="@drawable/notification"
         android:title="@string/title_notification" />
