--- a/app/src/main/res/layout/history_orderdetail_list.xml
+++ b/app/src/main/res/layout/history_orderdetail_list.xml
@@ -15,33 +15,36 @@
     <TextView
         android:id="@+id/nameFood"
         android:layout_toRightOf="@id/orderDetailImage"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Tên food"
         android:textStyle="bold"
         android:textColor="#000000"
-        android:textSize="20dp"
-        android:layout_marginTop="15dp"
+        android:textSize="18dp"
+        android:layout_marginTop="35dp"
         android:layout_marginLeft="10dp"/>
+
+    <TextView
+        android:id="@+id/quantity"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="35dp"
+        android:layout_toRightOf="@id/nameFood"
+        android:text="2"
+        android:textColor="@color/black"
+        android:textSize="16dp" />
 
     <TextView
         android:id="@+id/priceFood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="35dp"
+        android:layout_toRightOf="@id/quantity"
         android:text="$38,00"
         android:textColor="@color/black"
-        android:layout_toRightOf="@id/orderDetailImage"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="10dp"/>
-
-    <TextView
-        android:id="@+id/timeOrder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:text="8:00 AM"
-        android:textColor="#504A4A"
-        android:layout_toRightOf="@id/orderDetailImage"
-        android:layout_marginLeft="190dp"/>
+        android:textSize="16dp" />
 </RelativeLayout>
