--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -22,6 +22,7 @@
             android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:hint="Search..."
+            android:fontFamily="@font/roboto_medium"
             android:inputType="text"
             android:drawableRight="@drawable/search"
             android:paddingLeft="10dp"
