--- a/app/src/main/res/layout/button_custom.xml
+++ b/app/src/main/res/layout/button_custom.xml
@@ -16,6 +16,7 @@
         android:text="Button"
         android:textColor="@color/bgBottomNavigation"
         android:layout_margin="2dp"
+        android:fontFamily="@font/roboto_bold"
         android:background="@drawable/background_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
