--- a/app/src/main/res/layout/dialog_order.xml
+++ b/app/src/main/res/layout/dialog_order.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:text="Choose quantity"
+
+        android:fontFamily="@font/roboto_bold"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +40,7 @@
         android:layout_marginLeft="110dp"
         android:layout_marginTop="28dp"
         android:text="1"
+        android:fontFamily="@font/roboto_bold"
         android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintStart_toEndOf="@+id/imgMinus"
