--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="HISTORY"
+            android:fontFamily="@font/roboto_bold"
             android:layout_gravity="center"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -40,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ORDER DETAIL"
+            android:fontFamily="@font/roboto_bold"
             android:layout_marginLeft="50dp"
             android:textStyle="bold"
             android:textSize="20dp"
@@ -53,6 +55,7 @@
             android:layout_below="@id/title"
             android:layout_marginLeft="50dp"
             android:textSize="18dp"
+            android:fontFamily="@font/roboto_medium"
             android:layout_marginTop="20dp"/>
 
         <FrameLayout
@@ -70,6 +73,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="20dp"
             android:text="Item"
+            android:fontFamily="@font/roboto_bold"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -82,6 +86,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="20dp"
             android:text="Quantity"
+            android:fontFamily="@font/roboto_bold"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -93,6 +98,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="20dp"
             android:text="Total"
+            android:fontFamily="@font/roboto_bold"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -129,6 +135,7 @@
             android:textColor="@color/white"
             android:textSize="24dp"
             android:layout_centerVertical="true"
+            android:fontFamily="@font/roboto_bold"
             android:layout_marginLeft="100dp"/>
         <TextView
             android:id="@+id/totalCost"
@@ -136,6 +143,7 @@
             android:layout_height="wrap_content"
             android:text="$38.0"
             android:textSize="24dp"
+            android:fontFamily="@font/roboto_bold"
             android:layout_centerVertical="true"
             android:textStyle="bold"
             android:textColor="@color/white"
