--- a/app/src/main/res/layout/history_fragment.xml
+++ b/app/src/main/res/layout/history_fragment.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="HISTORY"
+            android:fontFamily="@font/roboto_bold"
             android:layout_gravity="center"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -39,6 +40,7 @@
         android:layout_marginRight="305dp"
         android:background="#CCCCCC"
         android:text="Current Order"
+        android:fontFamily="@font/roboto_bold"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:textStyle="bold"
