--- a/app/src/main/res/layout/history_orderdetail_list.xml
+++ b/app/src/main/res/layout/history_orderdetail_list.xml
@@ -20,6 +20,7 @@
         android:text="Tên food"
         android:textStyle="bold"
         android:textColor="#000000"
+        android:fontFamily="@font/roboto_medium"
         android:textSize="18dp"
         android:layout_marginTop="35dp"
         android:layout_marginLeft="10dp"/>
@@ -30,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="50dp"
+        android:fontFamily="@font/roboto_medium"
         android:layout_marginTop="35dp"
         android:layout_toRightOf="@id/nameFood"
         android:text="2"
@@ -37,6 +39,7 @@
         android:textSize="16dp" />
 
     <TextView
+        android:fontFamily="@font/roboto_medium"
         android:id="@+id/priceFood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
