--- a/app/src/main/res/layout/update_profile.xml
+++ b/app/src/main/res/layout/update_profile.xml
@@ -79,8 +79,8 @@
         android:layout_height="35dp"
         android:layout_marginStart="28dp"
         android:layout_marginLeft="28dp"
-
-        android:layout_marginTop="55dp"
+        android:fontFamily="@font/roboto_medium"
+        android:layout_marginTop="45dp"
         android:text="Name"
         android:textSize="15dp"
         android:textStyle="bold"
@@ -103,26 +103,28 @@
 
     <Button
         android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginBottom="148dp"
+        android:layout_width="243dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="136dp"
 
         android:background="@drawable/background_button_solid"
         android:text="Save"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
+        android:fontFamily="@font/roboto_thin"
+        android:paddingLeft="10dp"
         android:layout_marginTop="45dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
         android:ems="10"
+        android:background="@drawable/text_field_custom"
         android:inputType="textPersonName"
         android:hint="Name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -141,6 +143,7 @@
 
         <RadioButton
             android:id="@+id/raMale"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
