update status for order history

--- a/app/src/main/res/layout/history_order_list.xml
+++ b/app/src/main/res/layout/history_order_list.xml
@@ -36,6 +36,17 @@
         android:layout_marginLeft="10dp"/>
 
     <TextView
+        android:id="@+id/orderStatus"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:textSize="18dp"
+        android:text="Chờ xác nhận"
+        android:textColor="@color/bgBottomNavigation"
+        android:layout_toRightOf="@id/priceFood"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="100dp"/>
+
+    <TextView
         android:id="@+id/timeOrder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
