--- a/app/src/main/res/layout/dialog_order.xml
+++ b/app/src/main/res/layout/dialog_order.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
-        android:src="@drawable/search"
+        android:src="@drawable/minus"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTittle" />
 
@@ -34,10 +34,11 @@
         android:id="@+id/txtQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginLeft="110dp"
         android:layout_marginTop="28dp"
         android:text="1"
+        android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintStart_toEndOf="@+id/imgMinus"
         app:layout_constraintTop_toBottomOf="@+id/txtTittle" />
@@ -51,19 +52,6 @@
         android:layout_marginRight="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTittle"
-        android:src="@drawable/search" />
-
-    <Button
-        android:id="@+id/btnBuyComfirm"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginLeft="128dp"
-        android:layout_marginTop="40dp"
-        android:text="Buy"
-        android:textColor="@color/white"
-        android:background="@drawable/background_button_solid"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtQuantity" />
+        android:src="@drawable/add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
