--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -212,7 +212,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/background_button_solid"
-                android:text="Save"
+                android:text="Edit"
                 android:fontFamily="@font/roboto_regular"
                 android:layout_marginBottom="10dp"
                 android:textColor="@color/white"
