--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -70,13 +70,17 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageDefault"
-            android:layout_marginLeft="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginStart="26dp"
+            android:layout_marginLeft="26dp"
             android:layout_marginTop="20dp"
-            android:text="Item"
             android:fontFamily="@font/roboto_bold"
+            android:text="Item"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/titleTable3"
             android:layout_width="wrap_content"
@@ -90,15 +94,18 @@
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageDefault"
-            android:layout_toRightOf="@id/titleTable3"
-            android:layout_marginLeft="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_marginTop="20dp"
-            android:text="Total"
+            android:layout_marginEnd="33dp"
+            android:layout_marginRight="33dp"
             android:fontFamily="@font/roboto_bold"
+            android:text="Total"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -125,30 +132,42 @@
         android:layout_marginTop="-150dp"
         android:layout_marginBottom="80dp"
         android:padding="10dp"
+        android:textAlignment="center"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:gravity="center_horizontal">
+
         <TextView
             android:id="@+id/txtTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="36dp"
+            android:layout_marginLeft="36dp"
+            android:layout_marginTop="10dp"
+            android:textAlignment="center"
+            android:fontFamily="@font/roboto_bold"
             android:text="Total cost: "
             android:textColor="@color/white"
             android:textSize="24dp"
-            android:layout_centerVertical="true"
-            android:fontFamily="@font/roboto_bold"
-            android:layout_marginLeft="100dp"/>
+            android:gravity="center_horizontal" />
+
         <TextView
             android:id="@+id/totalCost"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="$38.0"
-            android:textSize="24dp"
-            android:fontFamily="@font/roboto_bold"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:textStyle="bold"
+            android:layout_marginEnd="36dp"
+            android:layout_marginRight="36dp"
+            android:fontFamily="@font/roboto_bold"
+            android:text="$38.0"
             android:textColor="@color/white"
-            android:layout_toRightOf="@id/txtTotal"
-            android:layout_marginLeft="80dp"/>
+            android:textSize="24dp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
 </RelativeLayout>
