--- a/app/src/main/res/layout/history_orderdetail_list.xml
+++ b/app/src/main/res/layout/history_orderdetail_list.xml
@@ -12,42 +12,47 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         tools:ignore="InvalidId,MissingConstraints" />
+
     <TextView
         android:id="@+id/nameFood"
-        android:layout_toRightOf="@id/orderDetailImage"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="Tên food"
-        android:textStyle="bold"
-        android:textColor="#000000"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@id/orderDetailImage"
         android:fontFamily="@font/roboto_medium"
+        android:text="Tên food"
+        android:textColor="#000000"
         android:textSize="18dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginLeft="10dp"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/quantity"
         android:layout_width="20dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="50dp"
-        android:fontFamily="@font/roboto_medium"
-        android:layout_marginTop="35dp"
+        android:layout_marginLeft="29dp"
+        android:layout_marginTop="20dp"
         android:layout_toRightOf="@id/nameFood"
+        android:fontFamily="@font/roboto_medium"
         android:text="2"
         android:textColor="@color/black"
         android:textSize="16dp" />
 
     <TextView
-        android:fontFamily="@font/roboto_medium"
         android:id="@+id/priceFood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="35dp"
-        android:layout_toRightOf="@id/quantity"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginRight="33dp"
+        android:fontFamily="@font/roboto_medium"
         android:text="$38,00"
+        android:gravity="right"
         android:textColor="@color/black"
         android:textSize="16dp" />
 </RelativeLayout>
